Finish websocket flow

--- a/src/auth/templates/success.html
+++ b/src/auth/templates/success.html
@@ -8,7 +8,7 @@
 
 <body>
 <div class="content">
-    <img src="https://mc-heads.net/avatar/{{ uuid }}/128" alt="{{ name }}" class="logo"/>
+    <img src="{{ icon }}" alt="{{ name }}" class="logo"/>
     <h2>Login Successful</h2>
     <p>Hey, {{ name }}! You can now safely close this tab.</p>
 </div>
