--- a/src/auth/templates/error.html
+++ b/src/auth/templates/error.html
@@ -13,7 +13,7 @@
     <p>An error has occurred during the authentication process.</p>
     <p>
         Try closing this window and signing in again.
-        Join <a href="https://discord.gg/modrinth">our Discord server</a> to get help if this error persists after three attempts.
+        Join <a href="https://discord.modrinth.com">our Discord server</a> to get help if this error persists after three attempts.
     </p>
     <p><b>Debug information:</b> {{ message }}</p>
 </div>
